--- a/src/templates/app_services/service_detail.html
+++ b/src/templates/app_services/service_detail.html
@@ -4,7 +4,7 @@
   <p>{{ service.description }}</p>
   <p>Precio: ${{ service.price }}</p>
   <p>Activo: {{ service.active|yesno:"Sí,No" }}</p>
-  <a href="#">Editar</a>
+  <a href="{% url "app_services:service_update" service.pk%}">Editar</a>
   <a href="#">Eliminar</a>
-  <a href="#">Volver al listado</a>
+  <a href="{% url "app_services:services_list" %}">Volver al listado</a>
 {% endblock %}
