--- a/src/templates/app_services/service_form.html
+++ b/src/templates/app_services/service_form.html
@@ -7,6 +7,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn">Guardar</button>
-    <a href="{% url 'app_services:service_create' %}" class="btn-secondary">Cancelar</a>
+    <a href="{% url 'app_services:services_list' %}" class="btn-secondary">Cancelar</a>
   </form>
 {% endblock %}
