added bootstrap links and fixed some html

--- a/src/templates/employees_app/employee_list.html
+++ b/src/templates/employees_app/employee_list.html
@@ -1,3 +1,4 @@
+{% extends "base.html"%}
 <h1>Lista de Empleados</h1>
 <a href="{% url 'employees_app:employee_create' %}">Crear nuevo empleado</a>
 <table border="1">
