--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,21 +1,22 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <title>{% block title %}Eventos{% endblock %}</title>
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
-  </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+        crossorigin="anonymous"
+      />
+      <title>{% block title %}Eventos{% endblock %}</title>
+      <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+    </head>
+
     {% include "header.html" %}
-    <main>
+    <main class="flex-fill">
       <div class="container">{% block content %} {% endblock %}</div>
     </main>
     {% include "footer.html" %}
