--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,2 +1,8 @@
-{% block content %} 
-{% endblock %}
+{% load static %}
+<footer class="bg-body-tertiary text-lg-start mt-auto">
+  <div class="d-flex justify-content-center align-items-center p-3 flex-wrap">
+    <img src="{% static 'img/house_party.webp' %}" alt="Footer" width="60" height="60" class="mx-3">
+    <span class="text-muted mx-3 fs-5">© 2023 Eventos y Servicios</span>
+    <img src="{% static 'img/party_card.webp' %}" alt="Footer" width="60" height="60" class="mx-3">
+  </div>
+</footer>
