--- a/src/templates/employees_app/employee_form.html
+++ b/src/templates/employees_app/employee_form.html
@@ -1,8 +1,12 @@
 {% extends "base.html"%}
-<h1>{% if form.instance.pk %}Editar Empleado{% else %}Crear Empleado{% endif %}</h1>
+{% block content %}
+<h1>
+    {% if form.instance.pk %}Editar Empleado{% else %}Crear Empleado{% endif %}</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
 </form>
 <a href="{% url 'employees_app:employee_list' %}">Volver al listado</a>
+{% endblock %}
+
