--- a/src/templates/employees_app/employee_form.html
+++ b/src/templates/employees_app/employee_form.html
@@ -1,7 +1,9 @@
 {% extends "base.html"%}
 {% block content %}
 <h1>
-    {% if form.instance.pk %}Editar Empleado{% else %}Crear Empleado{% endif %}</h1>
+    {% if form.instance.pk %}Editar Empleado{% else %}Crear Empleado{% endif %}
+  
+</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
