--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -57,10 +57,9 @@
             Empleados
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="create">Crear</a></li>
+            <li><a class="dropdown-item" href="{% url 'employees_app:employee_list' %}">Editar empleados</a></li> 
+            <li><a class="dropdown-item" href="{% url 'employees_app:employee_list_activo' %}">Ver empleados</a></li>
           </ul>
         </li>
                 <li class="nav-item dropdown">
