--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -8,7 +8,7 @@
 </header>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid ms-5">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'home:home' %}">
         <img src="{% static 'img/code.webp' %}" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">Inicio</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="{% url 'app_services:services_list' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
