--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -51,9 +51,8 @@
             Empleados
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="create">Crear</a></li>
-            <li><a class="dropdown-item" href="{% url 'employees_app:employee_list' %}">Editar empleados</a></li> 
-            <li><a class="dropdown-item" href="{% url 'employees_app:employee_list_activo' %}">Ver empleados</a></li>
+            <li><a class="dropdown-item" href="{% url 'employees_app:employee_list_activo' %}">Listado de Empleados</a></li>
+            <li><a class="dropdown-item" href="create">Nuevo Empleado</a></li>
           </ul>
         </li>
                 <li class="nav-item dropdown">
@@ -62,7 +61,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'app_coordinators:coordinators_list' %}">Lista de Coordinadores</a></li>
-            <li><a class="dropdown-item" href="{% url 'app_coordinators:coordinator_create' %}">Agregar Coordinador</a></li>
+            <li><a class="dropdown-item" href="{% url 'app_coordinators:coordinator_create' %}">Nuevo Coordinador</a></li>
           </ul>
         </li>
     </div>
