--- a/src/templates/app_clients/clients_form.html
+++ b/src/templates/app_clients/clients_form.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>
-    {% if object %}Editar Cliente{% else %}Crear Cliente{% endif %}
-  </h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn">Guardar</button>
-    <a href="{% url 'app_clients:clients_create' %}" class="btn-secondary">Cancelar</a>
-  </form>
+  <div class="container mt-4">
+    <h1>
+      {% if object %}Editar Cliente{% else %}Crear Cliente{% endif %}
+    </h1>
+   <form method="post">
+     {% csrf_token %}
+     {{ form.as_p }}
+     <button type="submit" class="btn btn-primary">Guardar</button>
+     <a href="{% url 'app_clients:clients_list' %}" class="btn btn-danger">Cancelar</a>
+   </form>
+  </div>
 {% endblock %}
