--- a/src/templates/app_clients/clients_list.html
+++ b/src/templates/app_clients/clients_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h1 class="mb-0">Listado de Clientes</h1>
-    <a class="btn btn-primary" href="{% url 'app_coordinators:coordinator_create' %}">Crear nuevo coordinador</a>
+    <a class="btn btn-primary" href="{% url 'app_clients:clients_create' %}">Crear nuevo cliente</a>
   </div>
   <div class="table-responsive">
     <table class="table table-striped table-bordered align-middle">
