--- a/src/templates/app_coordinators/coordinators_form.html
+++ b/src/templates/app_coordinators/coordinators_form.html
@@ -4,7 +4,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Guardar</button>
-    <a href="{% url 'app_coordinators:coordinators_list' %}">Cancelar</a>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a href="{% url 'app_coordinators:coordinators_list' %}" class="btn btn-danger">Cancelar</a>
   </form>
 {% endblock %}
