--- a/src/templates/app_reservation/reservation_form.html
+++ b/src/templates/app_reservation/reservation_form.html
@@ -10,6 +10,6 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn">Guardar</button>
-    <a href="{% url 'app_reservation:reservation_list' %}" class="btn-secondary">Cancelar</a>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a href="{% url 'app_reservation:reservation_list' %}" class="btn btn-danger">Cancelar</a>
 {% endblock %}
