--- a/src/templates/app_services/service_form.html
+++ b/src/templates/app_services/service_form.html
@@ -6,7 +6,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn">Guardar</button>
-    <a href="{% url 'app_services:services_list' %}" class="btn-secondary">Cancelar</a>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a href="{% url 'app_services:services_list' %}" class="btn btn-danger">Cancelar</a>
   </form>
 {% endblock %}
