--- a/src/templates/employees_app/employee_form.html
+++ b/src/templates/employees_app/employee_form.html
@@ -7,8 +7,8 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Guardar</button>
+    <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
-<a href="{% url 'employees_app:employee_list' %}">Volver al listado</a>
+<a href="{% url 'employees_app:employee_list' %}" class="btn btn-danger">Cancelar</a>
 {% endblock %}
 
